PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-Test-4_11-141_if_else_brackets_invalid2/gcc-compile.txt
input.c:6:6: error: expected identifier or '('
    }else {
     ^
input.c:9:5: error: expected identifier or '('
    return a;
    ^
input.c:10:1: error: extraneous closing brace ('}')
}
^
3 errors generated.

return code: 1
